# tiny_engine_clean

./: .azuremlignore  .dockerignore  .gitignore  Dockerfile  README.md  app.py  azure_train.py  pyproject.toml
environment/: .dockerignore  Dockerfile.azure  tiny_engine_env.yml
output/: action_encoder.pth
scripts/: batch_upload.py  create_hdf5_dataset.py  move_files.sh  prepare_data_for_hdf5.py
src/: agent.py  config.py  model.py  train.py
src/tiny_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
